## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.2 1999/11/08 23:00:24 kahn Exp kahn $

pkgdata_DATA =			\
	colsel.xpm		\
	filesel.xpm		\
	gnp48x48.xpm		\
	tb_big.xpm		\
	tb_blank.xpm		\
	tb_bold.xpm		\
	tb_cancel.xpm		\
	tb_centjust.xpm		\
	tb_comment.xpm		\
	tb_copy.xpm		\
	tb_cut.xpm		\
	tb_edit.xpm		\
	tb_emphasis.xpm		\
	tb_exit.xpm		\
	tb_find.xpm		\
	tb_find_next.xpm	\
	tb_fontm1.xpm		\
	tb_fontp1.xpm		\
	tb_form.xpm		\
	tb_formoption.xpm	\
	tb_formselect.xpm	\
	tb_frame.xpm		\
	tb_frame2.xpm		\
	tb_framebase.xpm	\
	tb_frameno.xpm		\
	tb_frameset.xpm		\
	tb_frameset2.xpm	\
	tb_framewiz.xpm		\
	tb_inputbutton.xpm	\
	tb_inputcheckbox.xpm	\
	tb_inputimage.xpm	\
	tb_inputpass.xpm	\
	tb_inputradio.xpm	\
	tb_inputreset.xpm	\
	tb_inputsubmit.xpm	\
	tb_inputtext.xpm	\
	tb_inputtextarea.xpm	\
	tb_h1.xpm		\
	tb_h2.xpm		\
	tb_h3.xpm		\
	tb_h4.xpm		\
	tb_h5.xpm		\
	tb_h6.xpm		\
	tb_help.xpm		\
	tb_image.xpm		\
	tb_italic.xpm		\
	tb_leftjust.xpm		\
	tb_linebreak.xpm	\
	tb_link.xpm		\
	tb_listitem.xpm		\
	tb_listdd.xpm		\
	tb_listdl.xpm		\
	tb_listdt.xpm		\
	tb_menu.xpm		\
	tb_new.xpm		\
	tb_open.xpm		\
	tb_ordered.xpm		\
	tb_paragraph.xpm	\
	tb_paste.xpm		\
	tb_prefs.xpm		\
	tb_pre.xpm		\
	tb_print.xpm		\
	tb_redo.xpm		\
	tb_replace.xpm		\
	tb_rightjust.xpm	\
	tb_save.xpm		\
	tb_separator.xpm	\
	tb_small.xpm		\
	tb_strikeout.xpm	\
	tb_strong.xpm		\
	tb_subscript.xpm	\
	tb_superscript.xpm	\
	tb_table.xpm		\
	tb_table2.xpm		\
	tb_tablewiz.xpm		\
	tb_target.xpm		\
	tb_td.xpm		\
	tb_td2.xpm		\
	tb_th.xpm		\
	tb_th2.xpm		\
	tb_title.xpm		\
	tb_tr.xpm		\
	tb_tr2.xpm		\
	tb_typewriter.xpm	\
	tb_undo.xpm		\
	tb_underline.xpm	\
	tb_unordered.xpm	\
	tb_winclose.xpm		\
	tb_winnew.xpm

EXTRA_DIST = $(pkgdata_DATA)

pkgdatadir = $(datadir)/$(PACKAGE)/xpm
